--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>testing</title>
+    <link rel="stylesheet" href="app.css">
+
 </head>
 <body>
     <h1>welcome to here</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem asperiores ducimus dicta.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem asperiores ducimus dicta.</p>
+    <p>Lorem ipsum dolor sitgit  amet consectetur adipisicing elit. Exercitationem asperiores ducimus dicta.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem asperiores ducimus dicta.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem asperiores ducimus dicta.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem asperiores ducimus dicta.</p>
